# teaching_ROS_AS_project

./: CMakeLists.txt  package.xml  readme.md
launch/: my_simulation.launch  pal_gazebo.launch
src/: camera_feed_sub.py  detect_person.cpp  get_depth_of_person.cpp  get_model_with_links_service.py  link_state_pub.py  link_state_sub.py  model_state_sub.py  model_with_links_pub.py  model_with_links_sub.py  nlp.py  set_model_state_service.py
src/Publishers/: model_state_pub.py
src/RL/: rl.py  rl_pub.py  rl_sub.py
src/Subscribers/: camera_feed_sub.py  link_state_sub.py  model_state_sub.py  model_with_links_sub.py
worlds/: my_world_example.world  rl1.world
